# QQFix

./: README.md
app/: build.gradle
app/src/androidTest/java/com/yanjin/qqfix/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_yanjin_qqfix_QQFixUtile.h  qqfix.cpp
app/src/main/java/com/yanjin/qqfix/: MainActivity.java  QQFixUtile.java
app/src/main/java/com/yanjin/qqfix/permission/: PermissionDenied.java  PermissionHelper.java  PermissionPermanentDenied.java  PermissionSucceed.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yanjin/qqfix/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
